migrate to java 21 features